# rcore_step_by_step_old

./: .gitignore  README.md
report/: 2. 最小化内核.md
xy_os/: Cargo.toml  Makefile
xy_os/src/: init.rs  interrupt.rs  lib.rs  main.rs  syscall.rs
xy_os/src/fs/: stdio.rs
xy_os/src/memory/: mod.rs
xy_os/src/process/: mod.rs  processor.rs  thread_pool.rs
xy_os/src/sync/: condvar.rs
xy_os/usr/: Makefile  rcore32.img
xy_os/usr/rust/src/: syscall.rs
