[package]
name = "xy_os"
version = "0.1.0"
authors = ["刘丰源 <511568816@qq.com.net>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bbl = { path = "crate/bbl" }
riscv = { git = "https://github.com/xy-plus/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.1"
device_tree = { git = "https://github.com/xy-plus/device_tree-rs" }
bit_field = "0.9"
buddy-allocator = { git = "https://github.com/xy-plus/buddy-allocator" }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.3"